<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ErrorFragment"
    android:id="@+id/errorFragment"
    android:background="@drawable/fragment_background"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/ef_no_match_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_match_en"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_error_outline_128"
        app:layout_constraintBottom_toTopOf="@+id/ef_send_feedback_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ef_no_match_text_view"></ImageView>

    <Button
        android:id="@+id/ef_send_feedback_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fragment_red_button_big"
        app:layout_constraintBottom_toTopOf="@+id/ef_button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/send_feedback_button_en"
        android:layout_marginBottom="10dp"></Button>

    <LinearLayout
        android:id="@+id/ef_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/fragment_normal_button_small"
            android:text="@string/view_full_image_button_en"></Button>

        <Button
            android:id="@+id/ef_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/fragment_normal_button_small"
            android:text="@string/close_button_en"></Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>