<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.FeedbackFragment"
    android:background="@drawable/fragment_background"
    android:orientation="vertical"
    android:tag="feedbackFragment"
    android:minWidth="300dp">

    <LinearLayout
        android:id="@+id/ff_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:text="@string/feedback_en"
            android:textSize="50dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/ff_comment_en"
            android:textSize="20dp"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <EditText
            android:id="@+id/ff_text_input"
            android:layout_width="match_parent"
            android:background="@drawable/ff_text_input_background"
            android:layout_height="0dp"
            android:layout_weight="6" />

    </LinearLayout>

    <Button
        android:id="@+id/ff_send_feedback_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:background="@drawable/fragment_feedback_button_background"
        android:text="@string/ff_submit_feedback_en"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusableInTouchMode="false" />


</LinearLayout>