<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pf_cardView"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:elevation="17dp"
    app:cardCornerRadius="15dp"
    android:clickable="true"
    tools:context=".GalleryPreviewFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DCDCDC"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/pill_navigation_background"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pf_pillNavigation_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/pill_navigation_selected_item"
                    android:text="@string/result_activity_pill_navigation_cropped_en"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pf_pillNavigation_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/invisible"
                    android:text="@string/result_activity_pill_navigation_full_en"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="12"
                android:clipToPadding="false">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/pf_imagePreview_previousButton"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center"
                    android:background="#00000000"
                    android:src="@drawable/ic_baseline_arrow_back_ios_new_48"
                    android:elevation="16dp"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/pf_imagePreview_nextButton"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center"
                    android:background="#00000000"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_48"
                    android:elevation="16dp"/>

                <ImageView
                    android:id="@+id/pf_imagePreview_imageView"
                    android:contentDescription="@string/result_image_content_description_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:adjustViewBounds="true"
                    android:elevation="15dp"
                    android:outlineProvider="bounds"
                    android:outlineSpotShadowColor="@color/black"
                    android:scaleType="fitCenter"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="5dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/pf_shareButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_baseline_share_48"/>

                    <TextView
                        android:id="@+id/pf_shareButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/pf_saveOneButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_baseline_image_48"/>

                    <TextView
                        android:id="@+id/pf_saveOneButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/pf_saveBothButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_baseline_filter_2_48"/>

                    <TextView
                        android:id="@+id/pf_saveBothButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/result_activity_saveBothButtonText_en"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>